working on the monster kingdom page

--- a/html/system/monster-kingdom.html
+++ b/html/system/monster-kingdom.html
@@ -137,19 +137,361 @@
             </tr>
           </table>
           <h4 id="flying_friends">Flying Friends</h4>
-          <p>Table</p>
+          <table class="table_less_padding">
+            <thead>
+              <tr>
+                <th>Lv1</th>
+                <th>Lv2</th>
+                <th>Lv3</th>
+                <th>Lv4</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Pumphantasm</td>
+                <td>Pumphantom</td>
+                <td>Pumpking</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Tiny Phoenix</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Weather Doll</td>
+                <td>Rainy Doll</td>
+                <td>Stormy Doll</td>
+                <td>Monsoon Doll</td>
+              </tr>
+              <tr>
+                <td>Gale</td>
+                <td>Whirlwind</td>
+                <td>Kamikaze</td>
+                <td>Typhoon</td>
+              </tr>
+              <tr>
+                <td>Mr. Drone</td>
+                <td>Mr. Helico</td>
+                <td>Mr. Gyro</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Gyadon</td>
+                <td>Gyairas</td>
+                <td>Gyandora</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Yamikichi</td>
+                <td>Warukichi</td>
+                <td>Zurukichi</td>
+                <td>-</td>
+              </tr>
+            </tbody>
+          </table>
           <h4 id="dragon_mountain">Dragon Mountain</h4>
-          <p>Text</p>
-          <p>Table</p>
+          <p>Manegineko enters the Dragon family enclosure once Monster Kingdom is complete.<br>Note that Armor Spider and Queen Spider are in the same enclosure.</p>
+          <table class="table_less_padding">
+            <thead>
+              <tr>
+                <th>Lv1</th>
+                <th>Lv2</th>
+                <th>Lv3</th>
+                <th>Lv4</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Dragon</td>
+                <td>Sky Dragon</td>
+                <td>Archdragon</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Gazer</td>
+                <td>Super Gazer</td>
+                <td>Hyper Gazer</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Slug</td>
+                <td>Serious Slug</td>
+                <td>Rancor Slug</td>
+                <td>Intolerable Slug</td>
+              </tr>
+              <tr>
+                <td>Shaaga</td>
+                <td>Nashaaga</td>
+                <td>Lashaaga</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Escargon</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Scorpion</td>
+                <td>Demon Scorpion</td>
+                <td>Stun Scorpion</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Bone Dragon</td>
+                <td>Skull Dragon</td>
+                <td>Garm Dragon</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Armor Spider</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Queen Spider</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+              </tr>
+            </tbody>
+          </table>
           <h4 id="underground_empire">Underground Empire</h4>
-          <p>Table</p>
+          <table class="table_less_padding">
+            <thead>
+              <tr>
+                <th>Lv1</th>
+                <th>Lv2</th>
+                <th>Lv3</th>
+                <th>Lv4</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Nigiri Trainee</td>
+                <td>Nigiri Morph</td>
+                <td>Nigiri Boss</td>
+                <td>Nigiri Master</td>
+              </tr>
+              <tr>
+                <td>Straw Voodoll</td>
+                <td>Nailed Voodoll</td>
+                <td>Spiked Voodoll</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Wolf Droid</td>
+                <td>Gorilla Bot</td>
+                <td>Bear Borg</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Ironhead</td>
+                <td>Chainhead</td>
+                <td>Gigahead</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Mixer</td>
+                <td>Mixermon</td>
+                <td>Mixergon</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Golem</td>
+                <td>Stone Golem</td>
+                <td>Magma Golem</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Stone Beast</td>
+                <td>Rock Beast</td>
+                <td>Boulder Beast</td>
+                <td>-</td>
+              </tr>
+            </tbody>
+          </table>
           <h4 id="ninjas_hidden_village">Ninja's Hidden Village</h4>
-          <p>Table</p>
+          <table class="table_less_padding">
+            <thead>
+              <tr>
+                <th>Lv1</th>
+                <th>Lv2</th>
+                <th>Lv3</th>
+                <th>Lv4</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Kengo</td>
+                <td>Iai</td>
+                <td>Shihan</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Schubell</td>
+                <td>Menbell</td>
+                <td>Bellthoven</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Copycat Mask</td>
+                <td>Trickster Mask</td>
+                <td>Imposter Mask</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Bow Boy</td>
+                <td>Boy Cart</td>
+                <td>Pop Tank</td>
+                <td>Cranky Tank</td>
+              </tr>
+              <tr>
+                <td>Droplet Ninja</td>
+                <td>Landmine Ninja</td>
+                <td>Summon Ninja</td>
+                <td>Explosion Ninja</td>
+              </tr>
+              <tr>
+                <td>Dosukoi</td>
+                <td>Hakkeyoi</td>
+                <td>Gottsuan</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Ashigarudon</td>
+                <td>Samuraidon</td>
+                <td>Taishodon</td>
+                <td>Tonosamadon</td>
+              </tr>
+            </tbody>
+          </table>
           <h4 id="underwater_paradise">Underwater Paradise</h4>
-          <p>Text</p>
-          <p>Table</p>
+          <p>Kappas will occasionally throw the grass found inside their enclosure,<br>but the grass will never be thrown at Shiren.</p>
+          <table class="table_less_padding">
+            <thead>
+              <tr>
+                <th>Lv1</th>
+                <th>Lv2</th>
+                <th>Lv3</th>
+                <th>Lv4</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Zalokleft</td>
+                <td>Green Zalokleft</td>
+                <td>Iron Zalokleft</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Bored Kappa</td>
+                <td>Kappa Pest</td>
+                <td>Vexing Kappa</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Shotfish</td>
+                <td>Dragon Shotfish</td>
+                <td>King Shotfish</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Orcan</td>
+                <td>Orcada</td>
+                <td>Orcaon</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Aqua Dragon</td>
+                <td>Sea Dragon</td>
+                <td>Water Shinryu</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Spearfish</td>
+                <td>Lt. Spearfish</td>
+                <td>Capt. Spearfish</td>
+                <td>Adm. Spearfish</td>
+              </tr>
+              <tr>
+                <td>Water Strider</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+              </tr>
+            </tbody>
+          </table>
           <h4 id="mamel_land">Mamel Land</h4>
-          <p>Table</p>
+          <table class="table_less_padding">
+            <thead>
+              <tr>
+                <th>Lv1</th>
+                <th>Lv2</th>
+                <th>Lv3</th>
+                <th>Lv4</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Mamel</td>
+                <td>Pit Mamel</td>
+                <td>Cave Mamel</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Gamarra</td>
+                <td>Gamagucci</td>
+                <td>Gamagon</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Twisty Hani</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Chintala</td>
+                <td>Mid Chintala</td>
+                <td>Big Chintala</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Hunger Puppet</td>
+                <td>Starve Puppet</td>
+                <td>Famine Puppet</td>
+                <td>Diet Puppet</td>
+              </tr>
+              <tr>
+                <td>Armordillo</td>
+                <td>Armordillo Bro</td>
+                <td>Armordillo Pop</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Patient Bag</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Snacky</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Piko Hammer</td>
+                <td>Poko Hammer</td>
+                <td>Pako Hammer</td>
+                <td>-</td>
+              </tr>
+            </tbody>
+          </table>
           <h3 id="aiming_for_completion">Aiming for Completion</h3>
           <h4 id="handy_monsters">Handy Monsters</h4>
           <p>Dl</p>
