a little bit of cleanup

--- a/html/system/monsters.html
+++ b/html/system/monsters.html
@@ -25,6 +25,7 @@
           <h2 class="page_heading">Monsters</h2>
           <div id="monster_quick_links" class="monster_quick_links">
             <ul>
+              <li><a href="#monster_characteristics">Monster Characteristics</a></li>
               <li><a href="#monster_table_explanation">Table Explanation / Notes</a></li>
               <li><a href="#normal">Normal</a></li>
               <ul>
@@ -135,6 +136,8 @@
               </ul>
             </ul>
           </div>
+          <h2 id="monster_characteristics">Monster Characteristics</h2>
+          <p>Text</p>
           <div id="monster_table_explanation">
             <h2>Table Explanation / Notes</h2>
             <div>
