update index page

--- a/html/index.html
+++ b/html/index.html
@@ -95,7 +95,7 @@
       <main id="content" class="box content">
         <div>
           <p>Welcome! This is a strategy / wiki site for Shiren the Wanderer 2 (Nintendo 64)<br>to accompany the English patch.</p>
-          <p>It's a work-in-progress, so some pages don't have content yet, and others may change in time.<br>Feel free to follow the project <a href="https://krikzz.com/forum/index.php?topic=8495" target="_blank">here</a>.</p>
+          <p>It's a work-in-progress, so some pages don't have content yet, and others may change in time.<br>Feel free to follow the <a href="https://krikzz.com/forum/index.php?topic=8495" target="_blank">project thread</a> over at the EverDrive Forum.</p>
           <p>A significant portion of the information found on this site is hand-translated from the <a href="http://shiren2.lsx3.com" target="_blank">Japanese wiki</a>,<br>along with the addition of my own personal notes.</p>
           <p></p>
         </div>
