working on the monster kingdom page

--- a/html/system/monster-kingdom.html
+++ b/html/system/monster-kingdom.html
@@ -340,7 +340,7 @@
               <tr>
                 <td>Copycat Mask</td>
                 <td>Trickster Mask</td>
-                <td>Imposter Mask</td>
+                <td>Impostor Mask</td>
                 <td>-</td>
               </tr>
               <tr>
@@ -494,14 +494,398 @@
           </table>
           <h3 id="aiming_for_completion">Aiming for Completion</h3>
           <h4 id="handy_monsters">Handy Monsters</h4>
-          <p>Dl</p>
+          <dl>
+            <dt>Armordillo Family</dt>
+            <dd></dd>
+            <dt>Mixer Family</dt>
+            <dd></dd>
+            <dt>Kengo Family</dt>
+            <dd></dd>
+            <dt>Snacky</dt>
+            <dd></dd>
+            <dt>Gazer Family</dt>
+            <dd></dd>
+            <dt>Monsoon Doll</dt>
+            <dd></dd>
+            <dt>Gazelle Pope</dt>
+            <dd></dd>
+          </dl>
           <h4 id="handy_items">Handy Items</h4>
-          <p>Dl</p>
-          <h4 id="tricky_or_tedious_monsters">Tricky or Tedious to Obtain Monsters</h4>
-          <p>Dl</p>
-          <h4 id="kinddom_monster_list">Monster Kingdom's Monster List</h4>
           <p>Text</p>
-          <p>Table</p>
+          <dl>
+            <dt>Monster Pot</dt>
+            <dd></dd>
+            <dt>Happy Grass</dt>
+            <dd></dd>
+            <dt>Happy Staff</dt>
+            <dd></dd>
+            <dt>Grass Gainer, Grass Tosser</dt>
+            <dd></dd>
+            <dt>Soil</dt>
+            <dd></dd>
+            <dt>Fear Scroll</dt>
+            <dd></dd>
+            <dt>Parry Bracelet</dt>
+            <dd></dd>
+            <dt>Possession Staff</dt>
+            <dd></dd>
+            <dt>Unlucky Staff</dt>
+            <dd></dd>
+            <dt>Seal Staff</dt>
+            <dd></dd>
+            <dt>Evaporate, Freeze, Wall Collapse Scrolls</dt>
+            <dd></dd>
+          </dl>
+          <h4 id="tricky_or_tedious_monsters">Tricky or Tedious to Obtain Monsters</h4>
+          <p>Text</p>
+          <dl>
+            <dt>・Monsters Requiring Extra Steps・</dt>
+            <dd></dd>
+            <dt>Mixer Family</dt>
+            <dd></dd>
+            <dt>Tonosamadon</dt>
+            <dd></dd>
+            <dt>Copycat Mask Family</dt>
+            <dd></dd>
+            <dt>Zalokleft, Gamarra Families</dt>
+            <dd></dd>
+            <dt>Mr. Drone Family</dt>
+            <dd></dd>
+            <dt>Aqua Dragon Family</dt>
+            <dd></dd>
+            <dt>Shotfish Family</dt>
+            <dd></dd>
+            <dt>・Monsters In Limited Locations・</dt>
+            <dd></dd>
+            <dt>Kengo, Mixer Families</dt>
+            <dd></dd>
+            <dt>Gyadon, Dosukoi, Orcan, Schubell Families</dt>
+            <dd></dd>
+            <dt>Poko Hammer, Pako Hammer</dt>
+            <dd></dd>
+            <dt>Tiny Phoenix</dt>
+            <dd></dd>
+            <dt>Escargon</dt>
+            <dd></dd>
+            <dt>Taurus Family</dt>
+            <dd></dd>
+            <dt>Queen Spider</dt>
+            <dd></dd>
+            <dt>N'dubbas</dt>
+            <dd></dd>
+          </dl>
+          <h4 id="kinddom_monster_list">Monster Kingdom's Monster List</h4>
+          <p>This list is ordered using the in-game order when taking monsters out of Monster Kingdom.</p>
+          <table class="table_less_padding monster_kingdom_table">
+            <tr>
+              <th>Page 1</th>
+              <th>Page 2</th>
+              <th>Page 3</th>
+              <th>Page 4</th>
+              <th>Page 5</th>
+            </tr>
+            <tr>
+              <td>Mamel</td>
+              <td>Green Zalokleft</td>
+              <td>Gazer</td>
+              <td>Iai</td>
+              <td>N'dubba 70~76yr</td>
+            </tr>
+            <tr>
+              <td>Pit Mamel</td>
+              <td>Iron Zalokleft</td>
+              <td>Super Gazer</td>
+              <td>Shihan</td>
+              <td>N'dubba 77~78yr</td>
+            </tr>
+            <tr>
+              <td>Cave Mamel</td>
+              <td>Twisty Hani</td>
+              <td>Hyper Gazer</td>
+              <td>Slug</td>
+              <td>N'dubba 88~89yr</td>
+            </tr>
+            <tr>
+              <td>Dragon</td>
+              <td>Taurus</td>
+              <td>Chintala</td>
+              <td>Serious Slug</td>
+              <td>N'dubba 90~98yr</td>
+            </tr>
+            <tr>
+              <td>Sky Dragon</td>
+              <td>Minotaur</td>
+              <td>Mid Chintala</td>
+              <td>Rancor Slug</td>
+              <td>N'dubba 99yr</td>
+            </tr>
+            <tr>
+              <td>Archdragon</td>
+              <td>Megataur</td>
+              <td>Big Chintala</td>
+              <td>Intolerable Slug</td>
+              <td>Tiny Phoenix</td>
+            </tr>
+            <tr>
+              <td>Gamarra</td>
+              <td>Nigiri Trainee</td>
+              <td>Porky</td>
+              <td>N'dubba 1~19yr</td>
+              <td>Shaaga</td>
+            </tr>
+            <tr>
+              <td>Gamagucci</td>
+              <td>Nigiri Morph</td>
+              <td>Porkchop</td>
+              <td>N'dubba 20~29yr</td>
+              <td>Nashaaga</td>
+            </tr>
+            <tr>
+              <td>Gamagon</td>
+              <td>Nigiri Boss</td>
+              <td>Porkton</td>
+              <td>N'dubba 30~59yr</td>
+              <td>Lashaaga</td>
+            </tr>
+            <tr>
+              <td>Zalokleft</td>
+              <td>Nigiri Master</td>
+              <td>Kengo</td>
+              <td>N'dubba 60~69yr</td>
+              <td>Schubell</td>
+            </tr>
+            <tr>
+              <th>Page 6</th>
+              <th>Page 7</th>
+              <th>Page 8</th>
+              <th>Page 9</th>
+              <th>Page 10</th>
+            </tr>
+            <tr>
+              <td>Menbell</td>
+              <td>Famine Puppet</td>
+              <td>Rainy Doll</td>
+              <td>King Tusker</td>
+              <td>Horse Emperor</td>
+            </tr>
+            <tr>
+              <td>Bellthoven</td>
+              <td>Diet Puppet</td>
+              <td>Stormy Doll</td>
+              <td>Monarch Tusker</td>
+              <td>Wolf Droid</td>
+            </tr>
+            <tr>
+              <td>Pumphantasm</td>
+              <td>Armordillo</td>
+              <td>Monsoon Doll</td>
+              <td>Emperor Tusker</td>
+              <td>Gorilla Bot</td>
+            </tr>
+            <tr>
+              <td>Pumphantom</td>
+              <td>Armordillo Bro</td>
+              <td>Gale</td>
+              <td>Bow Boy</td>
+              <td>Bear Borg</td>
+            </tr>
+            <tr>
+              <td>Pumpking</td>
+              <td>Armordillo Pop</td>
+              <td>Whirlwind</td>
+              <td>Boy Cart</td>
+              <td>Ironhead</td>
+            </tr>
+            <tr>
+              <td>Straw Voodoll</td>
+              <td>Patient Bag</td>
+              <td>Kamikaze</td>
+              <td>Pop Tank</td>
+              <td>Chainhead</td>
+            </tr>
+            <tr>
+              <td>Nailed Voodoll</td>
+              <td>Copycat Mask</td>
+              <td>Typhoon</td>
+              <td>Cranky Tank</td>
+              <td>Gigahead</td>
+            </tr>
+            <tr>
+              <td>Spiked Voodoll</td>
+              <td>Trickster Mask</td>
+              <td>Mr. Drone</td>
+              <td>Horse Ronin</td>
+              <td>Bat Kangaroo</td>
+            </tr>
+            <tr>
+              <td>Hunger Puppet</td>
+              <td>Impostor Mask</td>
+              <td>Mr. Helico</td>
+              <td>Horse Samurai</td>
+              <td>Evil Kangaroo</td>
+            </tr>
+            <tr>
+              <td>Starve Puppet</td>
+              <td>Weather Doll</td>
+              <td>Mr. Gyro</td>
+              <td>Horse Shogun</td>
+              <td>Devil Kangaroo</td>
+            </tr>
+            <tr>
+              <th>Page 11</th>
+              <th>Page 12</th>
+              <th>Page 13</th>
+              <th>Page 14</th>
+              <th>Page 15</th>
+            </tr>
+            <tr>
+              <td>Escargon</td>
+              <td>Kappa Pest</td>
+              <td>Gazelle Pope</td>
+              <td>Tonosamadon</td>
+              <td>Spearfish</td>
+            </tr>
+            <tr>
+              <td>Mixer</td>
+              <td>Vexing Kappa</td>
+              <td>Tiger Tosser</td>
+              <td>Shotfish</td>
+              <td>Lt. Spearfish</td>
+            </tr>
+            <tr>
+              <td>Mixermon</td>
+              <td>Piko Hammer</td>
+              <td>Tiger Hurler</td>
+              <td>Dragon Shotfish</td>
+              <td>Capt. Spearfish</td>
+            </tr>
+            <tr>
+              <td>Mixergon</td>
+              <td>Poko Hammer</td>
+              <td>Tiger Chucker</td>
+              <td>King Shotfish</td>
+              <td>Adm. Spearfish</td>
+            </tr>
+            <tr>
+              <td>Snacky</td>
+              <td>Pako Hammer</td>
+              <td>Gyadon</td>
+              <td>Orcan</td>
+              <td>Golem</td>
+            </tr>
+            <tr>
+              <td>Droplet Ninja</td>
+              <td>Dosukoi</td>
+              <td>Gyairas</td>
+              <td>Orcada</td>
+              <td>Stone Golem</td>
+            </tr>
+            <tr>
+              <td>Landmine Ninja</td>
+              <td>Hakkeyoi</td>
+              <td>Gyandora</td>
+              <td>Orcaon</td>
+              <td>Magma Golem</td>
+            </tr>
+            <tr>
+              <td>Summon Ninja</td>
+              <td>Gottsuan</td>
+              <td>Ashigarudon</td>
+              <td>Aqua Dragon</td>
+              <td>Yamikichi</td>
+            </tr>
+            <tr>
+              <td>Explosion Ninja</td>
+              <td>Sheep Priest</td>
+              <td>Samuraidon</td>
+              <td>Sea Dragon</td>
+              <td>Warukichi</td>
+            </tr>
+            <tr>
+              <td>Bored Kappa</td>
+              <td>Goat Pastor</td>
+              <td>Taishodon</td>
+              <td>Water Shinryu</td>
+              <td>Zurukichi</td>
+            </tr>
+            <tr>
+              <th>Page 16</th>
+              <th>Page 17</th>
+              <th></th>
+              <th></th>
+              <th></th>
+            </tr>
+            <tr>
+              <td>Scorpion</td>
+              <td>Queen Spider</td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Demon Scorpion</td>
+              <td>Water Strider</td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Stun Scorpion</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Bone Dragon</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Skull Dragon</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Garm Dragon</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Stone Beast</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Rock Beast</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Boulder Beast</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Armor Spider</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </table>
           <h4 id="gazelle_pope_glitch">Gazelle Pope Glitch</h4>
           <p>Text</p>
           <h4 id="growth_limit_breaking">Growth Limit Breaking</h4>
