--- a/html/system/monsters.html
+++ b/html/system/monsters.html
@@ -1098,7 +1098,7 @@
             <div class="monster_images">
               <img src="../../image/monster/copycat_mask.png" width="84" height="100" alt="copycat_mask">
               <img src="../../image/monster/trickster_mask.png" width="84" height="100" alt="trickster_mask">
-              <img src="../../image/monster/impostor_mask.png" width="84" height="100" alt="imposter_mask">
+              <img src="../../image/monster/impostor_mask.png" width="84" height="100" alt="impostor_mask">
             </div>
             <div class="family_desc">
               Disguises itself as other monsters, but can't copy their special attacks or stats.<br>Its disguise will be disabled when sealed, and you can also identify them by swinging a Knowledge Staff.<br>Never disguises itself as Dosukoi, Gamarra, Zalokleft, Orcan, Spearfish, or N'dubba family monsters.<br>Mixergons on 50~80F inside the Road to the End dungeon could actually be a disguised Mask monster.<br>It's also good to seal a monster before throwing an Extinction Scroll, just to be sure it's not actually one of these.<br>Never spawns asleep, so sleeping monsters are always their real selves. (Excluding monster houses)<br>You know it's one of these if a flying or amphibious monster is unable to move over or inside water, or if a double/triple speed mosnter is moving at regular speed.<br>
