working on the monster kingdom page

--- a/html/system/monster-kingdom.html
+++ b/html/system/monster-kingdom.html
@@ -39,8 +39,8 @@
             </li>
             <li><a href="#aiming_for_completion">Aiming for Completion</a>
               <ul>
-                <li><a href="#handy_monsters">Handy Monsters</a></li>
-                <li><a href="#handy_items">Handy Items</a></li>
+                <li><a href="#useful_monsters">Useful Monsters</a></li>
+                <li><a href="#useful_items">Useful Items</a></li>
                 <li><a href="#tricky_or_tedious_monsters">Tricky or Tedious to Obtain Monsters</a></li>
                 <li><a href="#kinddom_monster_list">Monster Kingdom's Monster List</a></li>
                 <li><a href="#gazelle_pope_glitch">Gazelle Pope Glitch</a></li>
@@ -493,36 +493,36 @@
             </tbody>
           </table>
           <h3 id="aiming_for_completion">Aiming for Completion</h3>
-          <h4 id="handy_monsters">Handy Monsters</h4>
+          <h4 id="useful_monsters">Useful Monsters</h4>
           <dl>
             <dt>Armordillo Family</dt>
-            <dd></dd>
+            <dd>Possibly the most useful monster in the game.<br>Use its special attack to quickly obtain Monster Pots and level up items from enemies.<br>Armordillos can be captured early on in any dungeon besides Shuten Trail Mid.</dd>
             <dt>Mixer Family</dt>
-            <dd></dd>
+            <dd>Living Synthesis Pot that can be used to quickly strengthen equipment.<br>Registering a Mixer to Monster Kingdom allows you to synthesize from inside Napus Storage.<br>Send out → throw items → defeat using 火 seal → collect equipment → take out Mixer Pot again.<br>Be careful not to return it to its pot or exit the storage before defeating it.<br></dd>
             <dt>Kengo Family</dt>
-            <dd></dd>
+            <dd>Disliked as an enemy, but treasured as an ally.<br>Its special attack lets you collect Shields (Kengo, Iai, Shihan), Weapons (Iai, Shihan), and Bracelets (Shihan).<br>Collect equipment with positive upgrade values in Shuten Trail Easy or Shrine's Hidden Hole,<br>and look for equipment with useful seals in Onigashima.</dd>
             <dt>Snacky</dt>
-            <dd></dd>
+            <dd>Capture a higher level monster by letting an enemy monster defeat an ally Snacky.</dd>
             <dt>Gazer Family</dt>
-            <dd></dd>
+            <dd>Can be used to level up an enemy monster when 2 monsters are present.<br>Simply confuse one or both monsters, and then wait until one defeats the other.</dd>
             <dt>Monsoon Doll</dt>
-            <dd></dd>
+            <dd>Nice to have when capturing Tonosamadon and Mixer Family Monsters.<br>It has a growth limit of 50, so it's a solid choice for general use as well.</dd>
             <dt>Gazelle Pope</dt>
-            <dd></dd>
+            <dd>Can be used to perform the <a href="/shiren2/html/system/monster-kingdom.html#gazelle_pope_glitch">Gazelle Pope glitch</a> to quickly register monsters to Monster Kingdom.<br>However, do keep in mind that using the glitch is cheating, so it's not recommended.</dd>
           </dl>
-          <h4 id="handy_items">Handy Items</h4>
-          <p>Text</p>
+          <h4 id="useful_items">Useful Items</h4>
+          <p>Always ensure safety before leveling up enemy monsters.<br>It's best to keep Revival Grass and Escape Scroll on hand to avoid losing items.</p>
           <dl>
             <dt>Monster Pot</dt>
-            <dd></dd>
+            <dd>Required to capture monsters.<br>Obtained from Shrine's Hidden Hole, and can be used in any dungeon that allows carry-in items.</dd>
             <dt>Happy Grass</dt>
-            <dd></dd>
+            <dd>Throw at an enemy monster to level it up.</dd>
             <dt>Happy Staff</dt>
-            <dd></dd>
+            <dd>Swing at an enemy monster to level it up.<br>Obtained from Sealed Room (Presto Pot), Onigashima (Specialty Shop), or Road to the End.</dd>
             <dt>Grass Gainer, Grass Tosser</dt>
-            <dd></dd>
-            <dt>Soil</dt>
-            <dd></dd>
+            <dd>Insert Happy Grass to basically turn it into a Happy Staff.</dd>
+            <dt>Soil (Castle Material)</dt>
+            <dd>Similar to defeating Snacky, enemy monsters that defeat Figures made from Soil will level up.<br>Can be helpful to weaken the Figure beforehand to ensure it loses against the desired monster.</dd>
             <dt>Fear Scroll</dt>
             <dd></dd>
             <dt>Parry Bracelet</dt>
