working on the monster kingdom page

--- a/html/system/monster-kingdom.html
+++ b/html/system/monster-kingdom.html
@@ -524,55 +524,56 @@
             <dt>Soil (Castle Material)</dt>
             <dd>Similar to defeating Snacky, enemy monsters that defeat Figures made from Soil will level up.<br>Can be helpful to weaken the Figure beforehand to ensure it loses against the desired monster.</dd>
             <dt>Fear Scroll</dt>
-            <dd></dd>
+            <dd>Read when 2 enemies are lined up in a hallway to have one defeat the other and level up.</dd>
             <dt>Parry Bracelet</dt>
-            <dd></dd>
+            <dd>Found in Sealed Room (1st Golden Interval).<br>Equip it when you're surrounded by multiple enemies to redirect damage<br>and have a monster level up by defeating another monster.</dd>
             <dt>Possession Staff</dt>
-            <dd></dd>
+            <dd>Take control of a monster and use it to block a room entrance or hallway to have<br>another monster defeat the monster you took control of, resulting in leveling up.</dd>
             <dt>Unlucky Staff</dt>
-            <dd></dd>
+            <dd>Occasionally found on the floor in Onigashima. Use it to when you need to catch a lower level monster.</dd>
             <dt>Seal Staff</dt>
-            <dd></dd>
+            <dd>Tonosamadon must be sealed in order to be captured, so you'll need this, Monsoon Doll, or King Tusker.</dd>
             <dt>Evaporate, Freeze, Wall Collapse Scrolls</dt>
-            <dd></dd>
+            <dd>Read these scrolls to capture Water element monsters, including Shotfish and Aqua Dragon families.<br>Note that these scrolls only take effect in Random Dungeons, and should be read outside of Shuten Trails.</dd>
           </dl>
           <h4 id="tricky_or_tedious_monsters">Tricky or Tedious to Obtain Monsters</h4>
-          <p>Text</p>
+          <p>Most monsters can be captured between the Shuten Trails and Onigashima, or Shrine's Hidden Hole.<br>If you plan on capturing many monsters outside of Shrine's Hidden Hole, you can use an ally Armorillo<br>inside Shrine's Hidden Hole to obtain lots of Monster Pots, and then store them in Mamo's drawers.</p>
+          <p>The trickiest monsters to capture are likely Queen Spider and each of the N'dubba colors.</p>
           <dl>
-            <dt>・Monsters Requiring Extra Steps・</dt>
+            <dt>Monsters Requiring Extra Steps</dt>
             <dd></dd>
             <dt>Mixer Family</dt>
-            <dd></dd>
+            <dd>It swallows Monster Pots like any other item, so you need to either seal it or throw<br>unneeded items until it reaches the eating limit before throwing the Monster Pot.<br>The number of items each level can swallow are: Mixer (2), Mixermon (3), and Mixergon (4).<br>If you'd rather seal it, you can use a Seal Staff, Monsoon Doll, or King Tusker.</dd>
             <dt>Tonosamadon</dt>
-            <dd></dd>
+            <dd>It reflects thrown items including Monster Pots, so it needs to be sealed first.<br>Use a Seal Staff, Monsoon Doll, or King Tusker to seal it.</dd>
             <dt>Copycat Mask Family</dt>
-            <dd></dd>
+            <dd>It's always disguised as another monster when it's generated, so you need to reveal its disguise first.<br>You can do so by getting hit by a regular attack while equipping a shield with the 識 seal (Identify Scroll),<br>or by sealing using a Seal Staff, Monsoon Doll, or King Tusker.<br>This monster family cannot be found in Sealed Room, so search between 22~23F of Onigashima instead.<br>It has somewhat low attack, so it's easiest to level it up using Happy Grass<br>or Happy Staff instead of trying to have it defeat another monster.</dd>
             <dt>Zalokleft, Gamarra Families</dt>
-            <dd></dd>
+            <dd>These two monster families basically have 0 attack power,<br>so use items like Happy Grass or Happy Staff to level them up instead.</dd>
             <dt>Mr. Drone Family</dt>
-            <dd></dd>
+            <dd>Capturing it while it's hovering over water will result in a submerged Monster Pot,<br>so be extra careful when capturing it in Shuten Trail Mid (6~7F),<br>since Freeze, Evaporate, and Wall Collapse scrolls don't take effect in Shuffle Dungeon maps.<br>Use items like Happy Grass or Happy Staff to level it up.</dd>
             <dt>Aqua Dragon Family</dt>
-            <dd></dd>
+            <dd>Only generated inside water, so capturing it by throwing a Monster Pot will result in a submerged pot.<br>Either use a Swap Staff to force it onto land, or read an Evaporate, Freeze, or Wall Collapse scroll.</dd>
             <dt>Shotfish Family</dt>
-            <dd></dd>
-            <dt>・Monsters In Limited Locations・</dt>
+            <dd>Always generated underwater, so it cannot be hit by thrown items.<br>Read an Evaporate or Wall Collapse Scroll to force it onto land in order to capture it.<br>Hakkeyoi and Gottsuan can potentially shift the Shotfish onto land with their special attack as well.<br>Can be leveled up while it's underwater by having it defeat a Figure or Snacky.</dd>
+            <dt>Monsters In Limited Locations</dt>
             <dd></dd>
             <dt>Kengo, Mixer Families</dt>
-            <dd></dd>
+            <dd>Cannot be found in Shrine's Hidden Hole, so you'll need to visit a different dungeon like Shuten Trail Hard.</dd>
             <dt>Gyadon, Dosukoi, Orcan, Schubell Families</dt>
-            <dd></dd>
+            <dd>Cannot be found in the Shuten Trails or Onigashima.<br>Look for them in Sealed Room or Shrine's Hidden Hole instead.<br>Easiest to capture the entire group in Sealed Room using items like Happy Grass or Happy Staff.</dd>
             <dt>Poko Hammer, Pako Hammer</dt>
-            <dd></dd>
+            <dd>These two can only be found naturally in Halfway Well.<br>Recommended to use Happy Grass or Happy Staff in Shuten Trail Easy.</dd>
             <dt>Tiny Phoenix</dt>
-            <dd></dd>
+            <dd>Only found on floors 50F+ of Shrine's Hidden Hole, or 20F+ of Sealed Room.<br>Faster to capture it in Sealed Room, provided you've upgraded your equipment.</dd>
             <dt>Escargon</dt>
-            <dd></dd>
+            <dd>Rarely found on floors 50F+ inside Sealed Room.<br>Also appears between floors 40~80F of Road to the End, but cannot be found in Shrine's Hidden Hole.</dd>
             <dt>Taurus Family</dt>
-            <dd></dd>
+            <dd>Only found in Sealed Room or Road to the End.<br>In both dungeons, Minotaurs appear on floors 78F+, and Megataurs appear on floors 86F+.<br>Taurus cannot be found anywhere, so you'll need to use Twisty Grass, Unlucky Seed, or Unlucky Staff.</dd>
             <dt>Queen Spider</dt>
-            <dd></dd>
+            <dd>Only found on floors 60F+ inside Shrine's Hidden Hole.<br>Note that Queen Spider no longer spawns in Shuten Trail Hard after clearing Onigashima.<br>If you want to complete Monster Kingdom, there's no way around having to capture it in <a href="/shiren2/html/dungeon/shrines-hidden-hole.html">Shrine's Hidden Hole</a>.<br>Practice the techniques and use the information found on this site to reach 60F. You can do it!</dd>
             <dt>N'dubbas</dt>
-            <dd></dd>
+            <dd>The age of a N'dubba is equivalent to its level.<br>For example, if you swing a Happy Staff at a N'dubba 1yr (green), it becomes N'dubba 2yr (green).<br>And if you swing the staff at a N'dubba 1yr (green) 19 times, it becomes N'dubba 20yr (pink).<br>So it's much faster to search for specific ages in Sealed Room, rather than relying on level up items.<br><br>The floor number in Sealed Room directly correlates to N'dubba's age.<br>So you can search in the following floor ranges for specific colors:<br>Green: 1~19F, Pink: 20~29F, Blue: 30~59F, Red: 60~69F, Light Blue: 70~76F,<br>Yellow: 77~87F, Gray: 88~89F, Light Green: 90~98F, White: 99F<br><br>N'dubbas can be picked up by swapping places with an ally that is standing on top of a disguised N'dubba.<br>This allows you to store N'dubbas in Storage Pots, removing the need to bring Monster Pots into Sealed Room.<br>You can't register disguised N'dubbas to Monster Kingdom, but the disguise will be canceled<br>if you throw the N'dubba while inside a dungeon, allowing you to capture it.<br>Note that throwing a disguised N'dubba inside Napus Storage won't cancel the disguise.</dd>
           </dl>
           <h4 id="kinddom_monster_list">Monster Kingdom's Monster List</h4>
           <p>This list is ordered using the in-game order when taking monsters out of Monster Kingdom.</p>
